fix: adjusted padding for server response time metric off screen issue

--- a/src/components/MetricsVisualizer/metrics-visualizer.css
+++ b/src/components/MetricsVisualizer/metrics-visualizer.css
@@ -15,7 +15,7 @@
  */
 
 .metrics-visualizer {
-  padding: 0 120px;
+  padding: 0 140px;
 }
 
 .metrics-visualizer-inside {
